--- a/assets/css/element-bits.css
+++ b/assets/css/element-bits.css
@@ -264,17 +264,24 @@
 */
 
 .eb-accordion-wp-menu-list {
-  width: 340px;
+  width: 100vw;
   height: 94vh;
   overflow-y: auto;
   overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .eb-accordion-wp-menu-list ul {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   list-style: none;
   margin: 0;
   padding: 0;
-  width: 100%;
 }
 
 .eb-accordion-wp-menu-list > .menu {
