Settings api, google maps key option added

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -1,10 +1,20 @@
 .eb-widget-icon {
-    display: inline-block;
-    width: 24px;
-    height: 24px;
-    border-radius: 4px;
-    background: url(/wp-content/plugins/element-bits/assets/images/novel-icon-white-512px.png) center no-repeat;
-    background-size: 100%;
-    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.14), 0 3px 2px -2px rgba(0, 0, 0, 0.12), 0 1px 8px 0 rgba(0, 0, 0, 0.2);
-  }
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  border-radius: 4px;
+  background: url(/wp-content/plugins/element-bits/assets/images/novel-icon-white-512px.png) center no-repeat;
+  background-size: 100%;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.14), 0 3px 2px -2px rgba(0, 0, 0, 0.12), 0 1px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.elementbits-settings-form .form-table tr {
+
+  background: #fdfdfd;
+  box-shadow: 0 1px 4px rgba(0,0,0,.04);
+}
+
+.elementbits-settings-form .form-table tr th {
+  padding-left: 15px;
+}
   
