--- a/assets/css/element-bits.css
+++ b/assets/css/element-bits.css
@@ -1,5 +1,14 @@
 /*
 ==============================================
+  = Global
+==============================================
+*/
+.elementor-icon-box-title {
+  margin: 0;
+}
+
+/*
+==============================================
   = Section title
 ==============================================
 */
