--- a/assets/css/element-bits.css
+++ b/assets/css/element-bits.css
@@ -40,125 +40,6 @@
 
 /*
 ==============================================
-  = Wpml lang switch
-==============================================
-*/
-.eb-modal-box {
-  display: none;
-}
-
-.eb-wpml-lang-switch-modal .tingle-modal-box {
-  width: 300px;
-  border: 6px solid #dadada;
-  border-radius: 8px;
-}
-
-@media (min-width: 1200px) {
-  .eb-wpml-lang-switch-modal .tingle-modal-box {
-    width: 300px;
-  }
-}
-
-.eb-wpml-lang-switch-list {
-  width: 100%;
-  margin: 0;
-  padding: 15px;
-  list-style: none;
-}
-
-.eb-wpml-lang-switch-list li a {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 10px;
-  border-bottom: 1px solid #e4e4e4;
-  background: #fff;
-  color: #222;
-  transition: all 0.3s;
-  margin: 0;
-}
-
-.eb-wpml-lang-switch-list li a:hover {
-  background: #f1f1f1;
-}
-
-.eb-wpml-lang-switch-list li {
-  margin: auto;
-}
-
-.eb-lang-switch-handle {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  line-height: 1;
-}
-
-.eb-lang-switch-flag {
-  margin-right: 5px;
-}
-
-.eb-copyright-row {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.eb-copyright-row * {
-  margin: 0;
-  padding: 0;
-}
-
-.eb-wpml-lang-switch-grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-
-.eb-wpml-lang-switch-grid .eb-lang-switch-handle {
-  width: 25%;
-  flex-basis: 25%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 5px;
-  margin: 10px;
-}
-
-.eb-wpml-lang-switch-grid .eb-lang-switch-handle img {
-  border-radius: 4px;
-  transition: all 0.3s;
-  box-shadow: 0 14px 24px 0 rgba(50,48,57,.25);
-  margin: 0 10px;
-}
-
-.eb-wpml-lang-switch-grid .eb-lang-switch-handle:hover img {
-  box-shadow: 0 14px 24px 0 rgba(50,48,57,.3);
-  transform: translateY(-2px);
-}
-
-.eb-wpml-lang-switch-grid .eb-lang-switch-handle img.eb-lang-switch-flag-circle {
-  border-radius: 50%;
-}
-
-.eb-lang-switch-modal-title {
-  text-align: center;
-  margin-bottom: 20px;
-}
-
-.eb-wpml-lang-switch-list--list_names li a {
-  justify-content: center;
-}
-
-@media only screen and (max-width: 400px) {
-  .eb-wpml-lang-switch-grid .eb-lang-switch-handle {
-    width: 92%;
-    flex-basis: 92%;
-  }
-}
-
-/*
-==============================================
   = Novel/Site copyright
 ==============================================
 */
@@ -463,4 +344,113 @@
 
 .eb-datepicker-field-guests .eb-datepicker-field-inner {
   height: 100%;
+}
+
+/*
+==============================================
+  = Lang switch modal
+==============================================
+*/
+.eb-modal-container {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  top :0;
+  left: 0;
+  z-index: -10;
+  opacity: 0;
+  transition: all 0.4s;
+}
+
+.eb-modal-container--open {
+  z-index: 10004;
+  opacity: 1;
+}
+
+.eb-modal-overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top :0;
+  left: 0;
+  z-index: 0;
+}
+
+.modal-body {
+  padding: 1.5rem 1rem 1rem 1rem;
+}
+
+.eb-modal {
+  position: relative;
+  width: 440px;
+  background: #fff;
+  z-index: 1;
+  padding: 1rem;
+}
+
+@media screen and (max-width: 1023px) {
+  .eb-modal {
+    width: 92vw;
+  }
+}
+
+.eb-modal-close {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  color: #000;
+  top: 14px;
+  right: 14px;
+  cursor: pointer;
+}
+
+.eb-wpml-lang-switch-list {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
+}
+
+.eb-wpml-lang-switch-list img {
+  display: inline-block;
+}
+
+.eb-wpml-lang-switch-list > li a {
+  display: block;
+  padding: 0.5rem 0.75rem;
+}
+
+.eb-wpml-lang-switch-list > li a span {
+  margin-left: 8px;
+}
+
+.eb-wpml-lang-switch-list:not(.eb-wpml-lang-switch-list--grid) > li:not(:last-child) a {
+  border-bottom: 1px solid #eee;
+}
+
+.eb-wpml-lang-switch-list--grid {
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.eb-lang-switch-handle {
+  display: flex;
+  align-items: center;
+}
+
+/*
+==============================================
+  = Weather
+==============================================
+*/
+.eb-eb-weather {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
