--- a/assets/css/element-bits.css
+++ b/assets/css/element-bits.css
@@ -64,17 +64,18 @@
 */
 
 .eb-accordion-wp-menu-list {
-  width: 100vw;
-  height: 94vh;
+  width: 100%;
+  height: 100%;
   overflow-y: auto;
   overflow-x: hidden;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: center; /* X */
   justify-content: center;
 }
 
 .eb-accordion-wp-menu-list ul {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -84,34 +85,17 @@
   padding: 0;
 }
 
-.eb-accordion-wp-menu-list > .menu {
-  margin-top: 80px;
-}
-
 .eb-accordion-wp-menu-list > .menu .sub-menu {
   display: none;
-  padding: 10px;
-  background: rgba(221, 221, 221, 0.15);
 }
 
 .eb-accordion-wp-menu-list ul li {
   width: 100%;
   display: block;
-  margin-bottom: 10px;
-}
-
-.eb-accordion-wp-menu-list ul.sub-menu li {
-  margin-bottom: 5px;
 }
 
 .eb-accordion-wp-menu-list a {
   text-decoration: none;
-  font-size: 22px;
-}
-
-.eb-accordion-wp-menu-list .sub-menu a {
-  font-size: 18px;
-  color: #ffebc7;
 }
 
 /*
