--- a/assets/css/element-bits.css
+++ b/assets/css/element-bits.css
@@ -365,6 +365,18 @@
   z-index: 0;
 }
 
+.eb-modal-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 4px;
+}
+
+.eb-modal-header h4 {
+  margin: 0;
+  padding: 0;
+}
+
 .modal-body {
   padding: 1.5rem 1rem 1rem 1rem;
 }
@@ -387,10 +399,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  position: absolute;
-  color: #000;
-  top: 14px;
-  right: 14px;
   cursor: pointer;
 }
 
@@ -407,6 +415,15 @@
   display: inline-block;
 }
 
+.eb-wpml-lang-switch-list > li {
+  margin-bottom: .725rem;
+  transition: all 0.3s;
+}
+
+.eb-wpml-lang-switch-list > li:hover {
+  transform: translateY(-4px);
+}
+
 .eb-wpml-lang-switch-list > li a {
   display: block;
   padding: 0.5rem 0.75rem;
@@ -416,9 +433,9 @@
   margin-left: 8px;
 }
 
-.eb-wpml-lang-switch-list:not(.eb-wpml-lang-switch-list--grid) > li:not(:last-child) a {
+/* .eb-wpml-lang-switch-list:not(.eb-wpml-lang-switch-list--grid) > li:not(:last-child) a {
   border-bottom: 1px solid #eee;
-}
+} */
 
 .eb-wpml-lang-switch-list--grid {
   flex-direction: row;
