--- a/assets/css/element-bits.css
+++ b/assets/css/element-bits.css
@@ -64,13 +64,11 @@
 */
 
 .eb-accordion-wp-menu-list {
-  width: 100%;
-  height: 100%;
   overflow-y: auto;
   overflow-x: hidden;
   display: flex;
   flex-direction: column;
-  align-items: center; /* X */
+  align-items: top;
   justify-content: center;
 }
 
